fixed shop details image on mobile going out of the screen

--- a/client/src/components/Shop/ShopDetails/ShopDetails.module.css
+++ b/client/src/components/Shop/ShopDetails/ShopDetails.module.css
@@ -102,6 +102,7 @@
 @media (max-width: 600px) {
   .Image {
     max-height: 300px;
+    max-width: 90vw;
   }
 
   .InformationContainer {
